// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders execution 1`] = `
<div
  className="bp3-navbar"
>
  <div
    className="bp3-navbar-group bp3-align-left"
  >
    <div
      className="bp3-navbar-heading"
      onClick={[Function]}
    >
      <img
        style={
          Object {
            "height": 34,
          }
        }
      />
    </div>
    <div
      className="bp3-navbar-divider"
    />
    <div
      className="sc-cIShpX iWIiAw"
    >
      <span
        className="bp3-popover-wrapper"
      >
        <span
          className="bp3-popover-target"
          onClick={[Function]}
        >
          <div
            className=""
            onKeyDown={[Function]}
          >
            <button
              className="bp3-button"
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              type="button"
            >
              <span
                className="bp3-button-text"
              >
                pandas_hello_world
              </span>
              <span
                className="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </span>
      </span>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-kafWEX dOcLVX"
      >
        <a
          className="active sc-feJyhm kTrNTW"
          href="/pandas_hello_world/explore"
          onClick={[Function]}
        >
          Explore
        </a>
        <a
          className="sc-feJyhm kTrNTW"
          href="/pandas_hello_world/execute"
          onClick={[Function]}
        >
          Execute
        </a>
        <a
          className="sc-feJyhm kTrNTW"
          href="/pandas_hello_world/runs"
          onClick={[Function]}
        >
          Runs
        </a>
      </div>
    </div>
  </div>
  <div
    className="bp3-navbar-group bp3-align-right"
  >
    <div
      className="sc-bRBYWo jpDyyc"
      style={
        Object {
          "background": "#3DCC91",
        }
      }
      title="Connecting..."
    />
    <span
      className="sc-ktHwxA doWHPT"
    />
  </div>
</div>
`;

exports[`renders pipeline page 1`] = `
Array [
  <div
    className="bp3-navbar"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading"
        onClick={[Function]}
      >
        <img
          style={
            Object {
              "height": 34,
            }
          }
        />
      </div>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-cIShpX iWIiAw"
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  Select a Pipeline...
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
      </div>
    </div>
    <div
      className="bp3-navbar-group bp3-align-right"
    >
      <div
        className="sc-bRBYWo jpDyyc"
        style={
          Object {
            "background": "#3DCC91",
          }
        }
        title="Connecting..."
      />
      <span
        className="sc-ktHwxA doWHPT"
      />
    </div>
  </div>,
  <div
    className="bp3-non-ideal-state"
  >
    <h4
      className="bp3-heading"
    >
      No pipeline selected
    </h4>
    <div>
      Select a pipeline in the navbar
    </div>
  </div>,
]
`;

exports[`renders pipeline solid page 1`] = `
<div
  className="bp3-navbar"
>
  <div
    className="bp3-navbar-group bp3-align-left"
  >
    <div
      className="bp3-navbar-heading"
      onClick={[Function]}
    >
      <img
        style={
          Object {
            "height": 34,
          }
        }
      />
    </div>
    <div
      className="bp3-navbar-divider"
    />
    <div
      className="sc-cIShpX iWIiAw"
    >
      <span
        className="bp3-popover-wrapper"
      >
        <span
          className="bp3-popover-target"
          onClick={[Function]}
        >
          <div
            className=""
            onKeyDown={[Function]}
          >
            <button
              className="bp3-button"
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              type="button"
            >
              <span
                className="bp3-button-text"
              >
                pandas_hello_world
              </span>
              <span
                className="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </span>
      </span>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-kafWEX dOcLVX"
      >
        <a
          className="active sc-feJyhm kTrNTW"
          href="/pandas_hello_world/explore"
          onClick={[Function]}
        >
          Explore
        </a>
        <a
          className="sc-feJyhm kTrNTW"
          href="/pandas_hello_world/execute"
          onClick={[Function]}
        >
          Execute
        </a>
        <a
          className="sc-feJyhm kTrNTW"
          href="/pandas_hello_world/runs"
          onClick={[Function]}
        >
          Runs
        </a>
      </div>
    </div>
  </div>
  <div
    className="bp3-navbar-group bp3-align-right"
  >
    <div
      className="sc-bRBYWo jpDyyc"
      style={
        Object {
          "background": "#3DCC91",
        }
      }
      title="Connecting..."
    />
    <span
      className="sc-ktHwxA doWHPT"
    />
  </div>
</div>
`;

exports[`renders type page 1`] = `
<div
  className="bp3-navbar"
>
  <div
    className="bp3-navbar-group bp3-align-left"
  >
    <div
      className="bp3-navbar-heading"
      onClick={[Function]}
    >
      <img
        style={
          Object {
            "height": 34,
          }
        }
      />
    </div>
    <div
      className="bp3-navbar-divider"
    />
    <div
      className="sc-cIShpX iWIiAw"
    >
      <span
        className="bp3-popover-wrapper"
      >
        <span
          className="bp3-popover-target"
          onClick={[Function]}
        >
          <div
            className=""
            onKeyDown={[Function]}
          >
            <button
              className="bp3-button"
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              type="button"
            >
              <span
                className="bp3-button-text"
              >
                pandas_hello_world
              </span>
              <span
                className="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </span>
      </span>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-kafWEX dOcLVX"
      >
        <a
          className="active sc-feJyhm kTrNTW"
          href="/pandas_hello_world/explore"
          onClick={[Function]}
        >
          Explore
        </a>
        <a
          className="sc-feJyhm kTrNTW"
          href="/pandas_hello_world/execute"
          onClick={[Function]}
        >
          Execute
        </a>
        <a
          className="sc-feJyhm kTrNTW"
          href="/pandas_hello_world/runs"
          onClick={[Function]}
        >
          Runs
        </a>
      </div>
    </div>
  </div>
  <div
    className="bp3-navbar-group bp3-align-right"
  >
    <div
      className="sc-bRBYWo jpDyyc"
      style={
        Object {
          "background": "#3DCC91",
        }
      }
      title="Connecting..."
    />
    <span
      className="sc-ktHwxA doWHPT"
    />
  </div>
</div>
`;

exports[`renders type page 2`] = `
<div
  className="bp3-navbar"
>
  <div
    className="bp3-navbar-group bp3-align-left"
  >
    <div
      className="bp3-navbar-heading"
      onClick={[Function]}
    >
      <img
        style={
          Object {
            "height": 34,
          }
        }
      />
    </div>
    <div
      className="bp3-navbar-divider"
    />
    <div
      className="sc-cIShpX iWIiAw"
    >
      <span
        className="bp3-popover-wrapper"
      >
        <span
          className="bp3-popover-target"
          onClick={[Function]}
        >
          <div
            className=""
            onKeyDown={[Function]}
          >
            <button
              className="bp3-button"
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              type="button"
            >
              <span
                className="bp3-button-text"
              >
                pandas_hello_world
              </span>
              <span
                className="bp3-icon bp3-icon-double-caret-vertical"
                icon="double-caret-vertical"
              >
                <svg
                  data-icon="double-caret-vertical"
                  height={16}
                  viewBox="0 0 16 16"
                  width={16}
                >
                  <desc>
                    double-caret-vertical
                  </desc>
                  <path
                    d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                    fillRule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </span>
      </span>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-kafWEX dOcLVX"
      >
        <a
          className="active sc-feJyhm kTrNTW"
          href="/pandas_hello_world/explore"
          onClick={[Function]}
        >
          Explore
        </a>
        <a
          className="sc-feJyhm kTrNTW"
          href="/pandas_hello_world/execute"
          onClick={[Function]}
        >
          Execute
        </a>
        <a
          className="sc-feJyhm kTrNTW"
          href="/pandas_hello_world/runs"
          onClick={[Function]}
        >
          Runs
        </a>
      </div>
    </div>
  </div>
  <div
    className="bp3-navbar-group bp3-align-right"
  >
    <div
      className="sc-bRBYWo jpDyyc"
      style={
        Object {
          "background": "#3DCC91",
        }
      }
      title="Connecting..."
    />
    <span
      className="sc-ktHwxA doWHPT"
    />
  </div>
</div>
`;

exports[`renders without error 1`] = `
Array [
  <div
    className="bp3-navbar"
  >
    <div
      className="bp3-navbar-group bp3-align-left"
    >
      <div
        className="bp3-navbar-heading"
        onClick={[Function]}
      >
        <img
          style={
            Object {
              "height": 34,
            }
          }
        />
      </div>
      <div
        className="bp3-navbar-divider"
      />
      <div
        className="sc-cIShpX iWIiAw"
      >
        <span
          className="bp3-popover-wrapper"
        >
          <span
            className="bp3-popover-target"
            onClick={[Function]}
          >
            <div
              className=""
              onKeyDown={[Function]}
            >
              <button
                className="bp3-button"
                onKeyDown={[Function]}
                onKeyUp={[Function]}
                type="button"
              >
                <span
                  className="bp3-button-text"
                >
                  Select a Pipeline...
                </span>
                <span
                  className="bp3-icon bp3-icon-double-caret-vertical"
                  icon="double-caret-vertical"
                >
                  <svg
                    data-icon="double-caret-vertical"
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <desc>
                      double-caret-vertical
                    </desc>
                    <path
                      d="M5 7h6a1.003 1.003 0 0 0 .71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 0 0 5 7zm6 2H5a1.003 1.003 0 0 0-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0 0 11 9z"
                      fillRule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </span>
      </div>
    </div>
    <div
      className="bp3-navbar-group bp3-align-right"
    >
      <div
        className="sc-bRBYWo jpDyyc"
        style={
          Object {
            "background": "#3DCC91",
          }
        }
        title="Connecting..."
      />
      <span
        className="sc-ktHwxA doWHPT"
      />
    </div>
  </div>,
  <div
    className="bp3-non-ideal-state"
  >
    <h4
      className="bp3-heading"
    >
      No pipeline selected
    </h4>
    <div>
      Select a pipeline in the navbar
    </div>
  </div>,
]
`;
